Updated links, created navbar dropdown

--- a/cv.html
+++ b/cv.html
@@ -30,14 +30,19 @@
                 <li>
                     <a class="site-nav-link" href="/cv.html">CV</a>
                 </li>
-                <li>
-                    <a class="site-nav-link" href="/rfcd/">RFCD</a>
-                </li>
-                <li>
-                    <a class="site-nav-link" href="/varutils/">Varutils</a>
-                </li>
-                <li>
-                    <a class="site-nav-link" href="/morphdown/">Morphdown</a>
+                <li class="site-nav-drop">
+                    <button></button>
+                    <ul>
+                        <li>
+                            <a class="site-nav-link" href="/rfcd/">RFCD</a>
+                        </li>
+                        <li>
+                            <a class="site-nav-link" href="/varr/">Varr</a>
+                        </li>
+                        <li>
+                            <a class="site-nav-link" href="/morphdown/">Morphdown</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </nav>
