--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -18,9 +18,14 @@
             <ul>
                 <li><a class="site-nav-link" href="/">Home</a></li>
                 <li><a class="site-nav-link" href="/cv.html">CV</a></li>
-                <li><a class="site-nav-link" href="/rfcd/">RFCD</a></li>
-                <li><a class="site-nav-link" href="/varutils/">Varutils</a></li>
-                <li><a class="site-nav-link" href="/morphdown/">Morphdown</a></li>
+                <li class="site-nav-drop">
+                    <button></button>
+                    <ul>
+                        <li><a class="site-nav-link" href="/rfcd/">RFCD</a></li>
+                        <li><a class="site-nav-link" href="/varr/">Varr</a></li>
+                        <li><a class="site-nav-link" href="/morphdown/">Morphdown</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
         <div class="header-block"></div>
