Reorganized structure for sticky footer

--- a/assets/cv/cv_template.html
+++ b/assets/cv/cv_template.html
@@ -17,9 +17,8 @@
 <body>
     @@site-header@@
 
-    @@titlecard@@
-
-    <main id="cv">
+    <main id="site-main" class="personal">
+        @@titlecard@@
 
         <section id="education">
             <h2>Education and Skills</h2> 
@@ -89,14 +88,14 @@
                     <p><i class="fa fa-trophy"></i> 1st place in the category (2020, by EESP).<p>
                 </li>
                 <li class="project">
-                    Creation of the <a href="https://ricardo-semiao.github.io/varutils/">varutils package</a> with functions for time series models.
+                    Creation of the <a href="https://ricardo-semiao.github.io/varr/">varutils package</a> with functions for time series models.
                     <p><i class="fa fa-hourglass"></i> In development.<p>
                 </li>
                 <li class="project">
                     <a href="https://github.com/ricardo-semiao/article-covid-svardiff">Graduation Thesis</a> on SVAR models applied to epidemiology.
                 </li>
                 <li class="project">
-                    Development of <a href="https://ricardo-semiao.github.io/course-r/">educational material</a> about R.
+                    Development of <a href="https://ricardo-semiao.github.io/rfcd/">educational material</a> about R.
                     <p><i class="fas fa-hourglass"></i> In development.<p>
                 </li>
                 <li class="project">
@@ -116,14 +115,15 @@
         <section id="others">
             <h2>Other Activities</h2>
             <ul>
-                <li class="other">Voluntary work during high school. Worked in daycare centers, nursing homes, and hospitals.</li>
-                <li class="other">Volunteer teacher in the EESP Ensina Project (2022 - 2023). Taught economics to high school students.</li>
-                <li class="other">Member of the Scout Movement (2010 - 2021). Developed socio-environmental activities.</li>
+                <li>Voluntary work during high school. Worked in daycare centers, nursing homes, and hospitals.</li>
+                <li>Volunteer teacher in the EESP Ensina Project (2022 - 2023). Taught economics to high school students.</li>
+                <li>Member of the Scout Movement (2010 - 2021). Developed socio-environmental activities.</li>
             </ul>
         </section>
         
-        <p id="cv-download">PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
-
+        <section id="cv-download">
+            <p>PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
+        </section>
     </main>
 
     @@site-footer@@
