--- a/cv.html
+++ b/cv.html
@@ -24,23 +24,23 @@
         <div class="header-block"></div>
         <nav>
             <ul>
-                <li>
-                    <a class="site-nav-link" href="/">Home</a>
+                <li class="nav-li">
+                    <a href="/">Home</a>
                 </li>
-                <li>
-                    <a class="site-nav-link" href="/cv.html">CV</a>
+                <li class="nav-li">
+                    <a href="/cv.html">CV</a>
                 </li>
-                <li class="site-nav-drop">
+                <li class="nav-drop">
                     <button></button>
                     <ul>
-                        <li>
-                            <a class="site-nav-link" href="/rfcd/">RFCD</a>
+                        <li class="nav-drop-li">
+                            <a href="/rfcd/">RFCD</a>
                         </li>
-                        <li>
-                            <a class="site-nav-link" href="/varr/">Varr</a>
+                        <li class="nav-drop-li">
+                            <a href="/varr/">Varr</a>
                         </li>
-                        <li>
-                            <a class="site-nav-link" href="/morphdown/">Morphdown</a>
+                        <li class="nav-drop-li">
+                            <a href="/morphdown/">Morphdown</a>
                         </li>
                     </ul>
                 </li>
@@ -49,11 +49,10 @@
         <div class="header-block"></div>
     </header>
 
-    <div id="titlecard">
-        <h1>Ricardo Semião e Castro</h1>
-    </div>
-
-    <main id="cv">
+    <main id="site-main" class="personal">
+        <div id="titlecard">
+            <h1>Ricardo Semião e Castro</h1>
+        </div>
 
         <section id="education">
             <h2>Education and Skills</h2> 
@@ -123,14 +122,14 @@
                     <p><i class="fa fa-trophy"></i> 1st place in the category (2020, by EESP).<p>
                 </li>
                 <li class="project">
-                    Creation of the <a href="https://ricardo-semiao.github.io/varutils/">varutils package</a> with functions for time series models.
+                    Creation of the <a href="https://ricardo-semiao.github.io/varr/">varutils package</a> with functions for time series models.
                     <p><i class="fa fa-hourglass"></i> In development.<p>
                 </li>
                 <li class="project">
                     <a href="https://github.com/ricardo-semiao/article-covid-svardiff">Graduation Thesis</a> on SVAR models applied to epidemiology.
                 </li>
                 <li class="project">
-                    Development of <a href="https://ricardo-semiao.github.io/course-r/">educational material</a> about R.
+                    Development of <a href="https://ricardo-semiao.github.io/rfcd/">educational material</a> about R.
                     <p><i class="fas fa-hourglass"></i> In development.<p>
                 </li>
                 <li class="project">
@@ -150,14 +149,15 @@
         <section id="others">
             <h2>Other Activities</h2>
             <ul>
-                <li class="other">Voluntary work during high school. Worked in daycare centers, nursing homes, and hospitals.</li>
-                <li class="other">Volunteer teacher in the EESP Ensina Project (2022 - 2023). Taught economics to high school students.</li>
-                <li class="other">Member of the Scout Movement (2010 - 2021). Developed socio-environmental activities.</li>
+                <li>Voluntary work during high school. Worked in daycare centers, nursing homes, and hospitals.</li>
+                <li>Volunteer teacher in the EESP Ensina Project (2022 - 2023). Taught economics to high school students.</li>
+                <li>Member of the Scout Movement (2010 - 2021). Developed socio-environmental activities.</li>
             </ul>
         </section>
         
-        <p id="cv-download">PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
-
+        <section id="cv-download">
+            <p>PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
+        </section>
     </main>
 
     <footer id="site-footer">
