--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -11,31 +11,29 @@
     <link rel="stylesheet" href="/site_assets/site_style.css">
 </div>
 
+<div data-component-name="site-scripts">
+    <script src="/site_assets/site_structure.js"></script>
+</div>
+
 <div data-component-name="site-header">
     <header id="site-header">
         <div class="header-block"></div>
         <nav>
             <ul>
-                <li><a class="site-nav-link" href="/">Home</a></li>
-                <li><a class="site-nav-link" href="/cv.html">CV</a></li>
-                <li class="site-nav-drop">
+                <li class="nav-li"><a href="/">Home</a></li>
+                <li class="nav-li"><a href="/cv.html">CV</a></li>
+                <li class="nav-drop">
                     <button></button>
                     <ul>
-                        <li><a class="site-nav-link" href="/rfcd/">RFCD</a></li>
-                        <li><a class="site-nav-link" href="/varr/">Varr</a></li>
-                        <li><a class="site-nav-link" href="/morphdown/">Morphdown</a></li>
+                        <li class="nav-drop-li"><a href="/rfcd/">RFCD</a></li>
+                        <li class="nav-drop-li"><a href="/varr/">Varr</a></li>
+                        <li class="nav-drop-li"><a href="/morphdown/">Morphdown</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>
         <div class="header-block"></div>
     </header>
-</div>
-
-<div data-component-name="titlecard">
-    <div id="titlecard">
-        <h1>Ricardo Semião e Castro</h1>
-    </div>
 </div>
 
 <div data-component-name="site-footer">
@@ -46,6 +44,9 @@
     </footer>
 </div>
 
-<div data-component-name="site-scripts">
-    <script src="/site_assets/site_structure.js"></script>
+<!-- Only for Home and CV: -->
+<div data-component-name="titlecard">
+    <div id="titlecard">
+        <h1>Ricardo Semião e Castro</h1>
+    </div>
 </div>
