--- a/assets/home/home_template.html
+++ b/assets/home/home_template.html
@@ -17,9 +17,8 @@
 <body>
     @@site-header@@
 
-    @@titlecard@@
-
-    <main id="home">
+    <main id="site-main" class="personal">
+        @@titlecard@@
 
         <section id="intro">
             <div class="multicolumn">
@@ -35,7 +34,7 @@
         </section>
 
         <section id="socials">
-            <h2 class="homepage-section">Socials</h2>
+            <h2>Socials</h2>
             <ul>
                 <li><a href="https://github.com/ricardo-semiao"><i class="fab fa-github"></i> Github</a></li>
                 <li><a href="mailto:ricardo.semiao@outlook.com"><i class="fas fa-envelope"></i> Email</a></li>
@@ -46,7 +45,7 @@
         </section>
 
         <section id="projects">
-            <h2 class="homepage-section">My Projects</h2>
+            <h2>My Projects</h2>
             <div class="multicolumn">
                 <div class="column-card">
                     <p>Academic articles/tasks:</p>
@@ -99,7 +98,6 @@
                 <p></p>
             </div>
         </section>
-
     </main>
 
     @@site-footer@@
