--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
         <div class="header-block"></div>
         <nav>
             <ul>
-                <li>
-                    <a class="site-nav-link" href="/">Home</a>
+                <li class="nav-li">
+                    <a href="/">Home</a>
                 </li>
-                <li>
-                    <a class="site-nav-link" href="/cv.html">CV</a>
+                <li class="nav-li">
+                    <a href="/cv.html">CV</a>
                 </li>
-                <li class="site-nav-drop">
+                <li class="nav-drop">
                     <button></button>
                     <ul>
-                        <li>
-                            <a class="site-nav-link" href="/rfcd/">RFCD</a>
+                        <li class="nav-drop-li">
+                            <a href="/rfcd/">RFCD</a>
                         </li>
-                        <li>
-                            <a class="site-nav-link" href="/varr/">Varr</a>
+                        <li class="nav-drop-li">
+                            <a href="/varr/">Varr</a>
                         </li>
-                        <li>
-                            <a class="site-nav-link" href="/morphdown/">Morphdown</a>
+                        <li class="nav-drop-li">
+                            <a href="/morphdown/">Morphdown</a>
                         </li>
                     </ul>
                 </li>
@@ -49,11 +49,10 @@
         <div class="header-block"></div>
     </header>
 
-    <div id="titlecard">
-        <h1>Ricardo Semião e Castro</h1>
-    </div>
-
-    <main id="home">
+    <main id="site-main" class="personal">
+        <div id="titlecard">
+            <h1>Ricardo Semião e Castro</h1>
+        </div>
 
         <section id="intro">
             <div class="multicolumn">
@@ -69,7 +68,7 @@
         </section>
 
         <section id="socials">
-            <h2 class="homepage-section">Socials</h2>
+            <h2>Socials</h2>
             <ul>
                 <li><a href="https://github.com/ricardo-semiao"><i class="fab fa-github"></i> Github</a></li>
                 <li><a href="mailto:ricardo.semiao@outlook.com"><i class="fas fa-envelope"></i> Email</a></li>
@@ -80,7 +79,7 @@
         </section>
 
         <section id="projects">
-            <h2 class="homepage-section">My Projects</h2>
+            <h2>My Projects</h2>
             <div class="multicolumn">
                 <div class="column-card">
                     <p>Academic articles/tasks:</p>
@@ -133,7 +132,6 @@
                 <p></p>
             </div>
         </section>
-
     </main>
 
     <footer id="site-footer">
