--- a/assets/cv/cv_template.html
+++ b/assets/cv/cv_template.html
@@ -17,7 +17,7 @@
 <body>
     @@site-header@@
 
-    <main id="site-main" class="personal">
+    <div id="site-main" class="personal">
         @@titlecard@@
 
         <section id="education">
@@ -124,7 +124,7 @@
         <section id="cv-download">
             <p>PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
         </section>
-    </main>
+    </div>
 
     @@site-footer@@
 
