--- a/assets/home/home_template.html
+++ b/assets/home/home_template.html
@@ -17,7 +17,7 @@
 <body>
     @@site-header@@
 
-    <main id="site-main" class="personal">
+    <div id="site-main" class="personal">
         @@titlecard@@
 
         <section id="intro">
@@ -98,7 +98,7 @@
                 <p></p>
             </div>
         </section>
-    </main>
+    </div>
 
     @@site-footer@@
 
