--- a/cv.html
+++ b/cv.html
@@ -33,13 +33,13 @@
                 <li class="nav-drop">
                     <button></button>
                     <ul>
-                        <li class="nav-drop-li">
+                        <li class="nav-li">
                             <a href="/rfcd/">RFCD</a>
                         </li>
-                        <li class="nav-drop-li">
+                        <li class="nav-li">
                             <a href="/varr/">Varr</a>
                         </li>
-                        <li class="nav-drop-li">
+                        <li class="nav-li">
                             <a href="/morphdown/">Morphdown</a>
                         </li>
                     </ul>
@@ -49,7 +49,7 @@
         <div class="header-block"></div>
     </header>
 
-    <main id="site-main" class="personal">
+    <div id="site-main" class="personal">
         <div id="titlecard">
             <h1>Ricardo Semião e Castro</h1>
         </div>
@@ -158,7 +158,7 @@
         <section id="cv-download">
             <p>PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
         </section>
-    </main>
+    </div>
 
     <footer id="site-footer">
         <div>
