--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                 <li class="nav-drop">
                     <button></button>
                     <ul>
-                        <li class="nav-drop-li">
+                        <li class="nav-li">
                             <a href="/rfcd/">RFCD</a>
                         </li>
-                        <li class="nav-drop-li">
+                        <li class="nav-li">
                             <a href="/varr/">Varr</a>
                         </li>
-                        <li class="nav-drop-li">
+                        <li class="nav-li">
                             <a href="/morphdown/">Morphdown</a>
                         </li>
                     </ul>
@@ -49,7 +49,7 @@
         <div class="header-block"></div>
     </header>
 
-    <main id="site-main" class="personal">
+    <div id="site-main" class="personal">
         <div id="titlecard">
             <h1>Ricardo Semião e Castro</h1>
         </div>
@@ -132,7 +132,7 @@
                 <p></p>
             </div>
         </section>
-    </main>
+    </div>
 
     <footer id="site-footer">
         <div>
