--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -25,9 +25,9 @@
                 <li class="nav-drop">
                     <button></button>
                     <ul>
-                        <li class="nav-drop-li"><a href="/rfcd/">RFCD</a></li>
-                        <li class="nav-drop-li"><a href="/varr/">Varr</a></li>
-                        <li class="nav-drop-li"><a href="/morphdown/">Morphdown</a></li>
+                        <li class="nav-li"><a href="/rfcd/">RFCD</a></li>
+                        <li class="nav-li"><a href="/varr/">Varr</a></li>
+                        <li class="nav-li"><a href="/morphdown/">Morphdown</a></li>
                     </ul>
                 </li>
             </ul>
