Updated projects, css adjustments

--- a/assets/home/home_template.html
+++ b/assets/home/home_template.html
@@ -50,9 +50,8 @@
                 <div class="column-card">
                     <p>Academic articles/tasks:</p>
                     <ul>
+                        <li><a href="https://github.com/ricardo-semiao/task-masters" data-explanation="Empirical and theoretical tasks from my masters degree, spamming several courses, with lots of econometrics.">task-masters</a></li>
                         <li><a href="https://github.com/ricardo-semiao/article-covid-svardiff" data-explanation="My graduation thesis. Its goal was to estimate the effect of the Brazilian vaccination policy, by comparing Structural VAR models before and after the start of its implementation.">article-covid-svardiff</a><span></li>
-                        <li><a href="https://github.com/ricardo-semiao/article-econometrics1" data-explanation="A empirical work for my Masters' Econometrics I course. Entailed the replication of Becker and Lewis (1973) with IPUMS data of Puerto Rico.">article-econometrics1</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/task-econometrics2" data-explanation="A series of taks for my Masters' Econometrics II course. All related to time series, with mathematical derivations, model building and testing, and simulations to check asymptotic properties.">task-econometrics2</a></li>
                     </ul>
                 </div>
                 <div class="column-card">
@@ -71,13 +70,6 @@
                     </ul>
                 </div>
                 <div class="column-card">
-                    <p>Freelance and challenges:</p>
-                    <ul>
-                        <li><a href="https://github.com/mevaldt/diversified_crypto" data-explanation="A R Shiny app for crypto portfolio optimization and analysis. Built in a project for Ripple.">diversified_crypto</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/challenge-constdev" data-explanation="A ML model to predict the investment flow at BOVESPA, for the 2022 Constellation A.M. Dev Challenge.">challenge-constdev</a></li>
-                    </ul>
-                </div>
-                <div class="column-card">
                     <p>Personal projects:</p>
                     <ul>
                         <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/" data-explanation="My personal site. It includes the Home and CV tabs, and the common templates used in other published projects.">This site</a></li>
@@ -87,8 +79,9 @@
                 <div class="column-card">
                     <p>Miscellaneous:</p>
                     <ul>
-                        <li><a href="https://github.com/ricardo-semiao/misc-allocator-ga" data-explanation="An optimization routine in R for a preference-based allocation problem, using generic algorithms. Not polished.">misc-allocator-ga</a></li>
                         <li><a href="https://github.com/ricardo-semiao/misc-general" data-explanation="Miscellaneous projects, most for fun or for learning, with questionable quality.">misc-general</a></li>
+                        <li><a href="https://github.com/mevaldt/diversified_crypto" data-explanation="A R Shiny app for crypto portfolio optimization and analysis. Built in a project for Ripple.">diversified_crypto</a></li>
+                        <li><a href="https://github.com/ricardo-semiao/challenge-constdev" data-explanation="A ML model to predict the investment flow at BOVESPA, for the 2022 Constellation A.M. Dev Challenge.">challenge-constdev</a></li>
                     </ul>
                 </div>
             </div>
