--- a/cv.html
+++ b/cv.html
@@ -42,6 +42,9 @@
                         <li class="nav-li">
                             <a href="/morphdown/">Morphdown</a>
                         </li>
+                        <li class="nav-li">
+                            <a href="/friendship.html">Friendship!!!</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
