--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -28,6 +28,7 @@
                         <li class="nav-li"><a href="/rfcd/">RFCD</a></li>
                         <li class="nav-li"><a href="/varr/">Varr</a></li>
                         <li class="nav-li"><a href="/morphdown/">Morphdown</a></li>
+                        <li class="nav-li"><a href="/friendship.html">Friendship!!!</a></li>
                     </ul>
                 </li>
             </ul>
