Added separated and texted nav-drops

--- a/cv.html
+++ b/cv.html
@@ -31,19 +31,32 @@
                     <a href="/cv.html">CV</a>
                 </li>
                 <li class="nav-drop">
+                    <p>Courses</p>
                     <button></button>
                     <ul>
                         <li class="nav-li">
-                            <a href="/rfcd/">RFCD</a>
+                            <a href="/course-rfcd/">R (RFCD)</a>
                         </li>
                         <li class="nav-li">
-                            <a href="/varr/">Varr</a>
+                            <a href="/course-ccia/">CS (CCIA)</a>
                         </li>
                         <li class="nav-li">
-                            <a href="/morphdown/">Morphdown</a>
+                            <a href="/course-paaml/">Python (PAAML)</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-drop">
+                    <p>Packages</p>
+                    <button></button>
+                    <ul>
+                        <li class="nav-li">
+                            <a href="/mtsdesc/">mtsdesc</a>
                         </li>
                         <li class="nav-li">
-                            <a href="/friendship.html">Friendship!!!</a>
+                            <a href="/phyopt/">phyopt</a>
+                        </li>
+                        <li class="nav-li">
+                            <a href="/morphdown/">morphdown</a>
                         </li>
                     </ul>
                 </li>
