--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -23,12 +23,21 @@
                 <li class="nav-li"><a href="/">Home</a></li>
                 <li class="nav-li"><a href="/cv.html">CV</a></li>
                 <li class="nav-drop">
+                    <p>Courses</p>
                     <button></button>
                     <ul>
-                        <li class="nav-li"><a href="/rfcd/">RFCD</a></li>
-                        <li class="nav-li"><a href="/varr/">Varr</a></li>
-                        <li class="nav-li"><a href="/morphdown/">Morphdown</a></li>
-                        <li class="nav-li"><a href="/friendship.html">Friendship!!!</a></li>
+                        <li class="nav-li"><a href="/course-rfcd/">R (RFCD)</a></li>
+                        <li class="nav-li"><a href="/course-ccia/">CS (CCIA)</a></li>
+                        <li class="nav-li"><a href="/course-paaml/">Python (PAAML)</a></li>
+                    </ul>
+                </li>
+                <li class="nav-drop">
+                    <p>Packages</p>
+                    <button></button>
+                    <ul>
+                        <li class="nav-li"><a href="/mtsdesc/">mtsdesc</a></li>
+                        <li class="nav-li"><a href="/phyopt/">phyopt</a></li>
+                        <li class="nav-li"><a href="/morphdown/">morphdown</a></li>
                     </ul>
                 </li>
             </ul>
