Updated projects and cv (added html-based pdf), navbar color and weight changes

--- a/assets/cv/cv_template.html
+++ b/assets/cv/cv_template.html
@@ -36,8 +36,12 @@
                     <td>Fluent English - Cambridge English: Advanced (C1) Certificate</td>
                 </tr>
                 <tr>
-                    <td>Software</td>
-                    <td>R | Python | LaTeX | HTML/CSS | Stata | Microsoft Office </td>
+                    <td>Programming</td>
+                    <td>R | Python | Julia | Stata </td>
+                </tr>
+                <tr>
+                    <td>Documenting</td>
+                    <td>LaTeX | HTML/CSS | Quarto | Microsoft Office </td>
                 </tr>
             </table>
         </section>
@@ -73,6 +77,14 @@
                     <h3>Private Tutor in Statistics, R, and Python</h3>
                     <p>Private lessons for university students. Active in StackOverflow: 260 answers in over 125 tags, top 5% in the R community.</p>
                 </li>
+                <!-- <li class="job">
+                    <h3>Researcher</h3>
+                    <div class="row-hfill">
+                        <p class="employer">ADB Sindical (syndicate of Brazilian diplomats)</p>
+                        <p class="duration">04/2024 - ongoing</p>
+                    </div>
+                    <p>Private lessons for university students. Active in StackOverflow: 260 answers in over 125 tags, top 5% in the R community.</p>
+                </li> -->
             </ul>
         </section>
         
@@ -84,27 +96,23 @@
                     <p><i class="fa fa-trophy"></i> 2nd place in the Dev Challenge (2022, Constellation A. M.).<p>
                 </li>
                 <li class="project">
-                    Analysis using Ridge and Lasso regression on salary determinants.
-                    <p><i class="fa fa-trophy"></i> 1st place in the category (2020, by EESP).<p>
+                    ANPEC exam, the Brazil-wide admission for master's students in economics.
+                    <p><i class="fa fa-trophy"></i> 10th place (without Brazilian economics).<p>
                 </li>
                 <li class="project">
-                    Creation of the <a href="https://ricardo-semiao.github.io/varr/">varutils package</a> with functions for time series models.
+                    Article awards: Ridge and Lasso regression analysis on salary determinants; nations clustering analysis with WTO data.
+                    <p><i class="fa fa-trophy"></i> 1st and 2nd place in each category (2020 and 2021, EESP).<p>
+                </li>
+                <li class="project">
+                    Developing of code packages: <a href="https://ricardo-semiao.github.io/mtdesc/">mtdesc</a> for multivariate time series visualization and testing; <a href="https://ricardo-semiao.github.io/phyopt/">phyopt</a> for creating population-based hybrid-optimization algorithms; and <a href="https://ricardo-semiao.github.io/morphdown/">morphdown</a> for programmatically modifying markdown file structures.
                     <p><i class="fa fa-hourglass"></i> In development.<p>
                 </li>
                 <li class="project">
-                    <a href="https://github.com/ricardo-semiao/article-covid-svardiff">Graduation Thesis</a> on SVAR models applied to epidemiology.
-                </li>
-                <li class="project">
-                    Development of <a href="https://ricardo-semiao.github.io/rfcd/">educational material</a> about R.
+                    Development of <a href="https://ricardo-semiao.github.io/course-rfcd/">educational material</a> about R, with voluntary classes being given at GVCode.
                     <p><i class="fas fa-hourglass"></i> In development.<p>
                 </li>
                 <li class="project">
-                    ANPEC exam, the Brazil-wide admission for master's students in economics.
-                    <p><i class="fa fa-trophy"></i> 10th place (excluding Brazilian economics).<p>
-                </li>
-                <li class="project">
-                    Clustering of countries using K-means and hierarchical clustering with WTO data.
-                    <p><i class="fas fa-trophy"></i> 2nd place in the category (2021, by EESP).<p>
+                    <a href="https://github.com/ricardo-semiao/article-covid-svardiff">Graduation thesis</a> on SVAR models applied to epidemiology, and <a href="https://github.com/ricardo-semiao/article-regimes-id-performance">Masters thesis</a> on performance analysis of regime-switching models via Monte Carlo simulations.
                 </li>
                 <li class="project">
                     See more on <a href="https://github.com/ricardo-semiao">my Github</a>.
@@ -122,7 +130,7 @@
         </section>
         
         <section id="cv-download">
-            <p>PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
+            <p>PDF version: <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/raw/main/assets/cv/cv_pdf/Ricardo%20Semi%C3%A3o%20-%20CV.pdf" download>download</a>.</p>
         </section>
     </div>
 
