--- a/assets/home/home_template.html
+++ b/assets/home/home_template.html
@@ -50,38 +50,40 @@
                 <div class="column-card">
                     <p>Academic articles/tasks:</p>
                     <ul>
-                        <li><a href="https://github.com/ricardo-semiao/task-masters" data-explanation="Empirical and theoretical tasks from my masters degree, spamming several courses, with lots of econometrics.">task-masters</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/article-covid-svardiff" data-explanation="My graduation thesis. Its goal was to estimate the effect of the Brazilian vaccination policy, by comparing Structural VAR models before and after the start of its implementation.">article-covid-svardiff</a><span></li>
+                        <li><a href="https://github.com/ricardo-semiao/misc-masters" data-explanation="Empirical and theoretical tasks from my masters degree, spamming several courses, with lots of econometrics.">misc-masters</a></li>
+                        <li><a href="https://github.com/ricardo-semiao/article-regime-id-performance" data-explanation="My (in progress) Master thesis. My goal is to understand the performance of regime switching time-series models, specially in respect to characteristics correctness of the identified regimes, using Monte Carlo simulations.">article-regime-id-performance</a><span></li>
+                        <li><a href="https://github.com/ricardo-semiao/article-covid-svardiff" data-explanation="My graduation thesis. My goal was to estimate the effect of the Brazilian vaccination policy, by comparing Structural VAR models before and after the start of its implementation.">article-covid-svardiff</a><span></li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Educational materials:</p>
                     <ul>
-                        <li><a href="https://ricardo-semiao.github.io/rfcd" data-explanation="An educational book on the R language. Authorial, but inspired by existing literature. It is in construction and available in the navbar above.">rfcd</a></li>
-                        <li><a href="https://github.com/gvcode/trainee" data-explanation="A Python course for the trainees of GVCode, a programming study group from FGV. Written with a team of colleagues, originally lead by me.">gvcode/trainee</a></li>
+                        <li><a href="https://ricardo-semiao.github.io/course-rfcd" data-explanation="An educational book on the R language. Authorial, but inspired by existing literature. It is in construction and available in the navbar above.">R (RFCD)</a></li>
+                        <li><a href="https://ricardo-semiao.github.io/course-ccia" data-explanation="An educational book on introductory Computer Science and its applications. Made for my own study. It is in construction and available in the navbar above.">CC (CCIA)</a></li>
+                        <li><a href="https://ricardo-semiao.github.io/course-paaml" data-explanation="An educational book on Python (automation, apps, and ML). Made for my personal study. It is in construction and available in the navbar above.">Python (PAAML)</a></li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Code packages:</p>
                     <ul>
-                        <li><a href="https://ricardo-semiao.github.io/varr" data-explanation="A R package for commonly needed ggplot graphs and utility functions on Vector Auto-Regressive analysis.">varr</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/tree/main/packages/template_injector" data-explanation="A simple, custom build, HTML template engine built in Python. It was built to power this site.">template_injector</a></li>
+                        <li><a href="https://ricardo-semiao.github.io/phyopt" data-explanation="A R package for describing multivariate time series with ggplots and tables.">phyopt</a></li>
+                        <li><a href="https://ricardo-semiao.github.io/mtsdesc" data-explanation="A R package for creating population-based hybrid-optimization algorithms.">mtsdesc</a></li>
                         <li><a href="https://github.com/ricardo-semiao/morphdown" data-explanation="A R package to programmatically change the structure of R Markdown files. Built to convert my book 'RFCD' into course-friendly slide presentations.">morphdown</a></li>
                     </ul>
                 </div>
                 <div class="column-card">
-                    <p>Personal projects:</p>
+                    <p>Site and tools:</p>
                     <ul>
-                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/" data-explanation="My personal site. It includes the Home and CV tabs, and the common templates used in other published projects.">This site</a></li>
                         <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/" data-explanation="A GitHub repository for storing my personal palette, file templates, etc.">Personal themes/tools</a></li>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/" data-explanation="My personal site. It includes the Home and CV tabs, and the common templates used in other published projects.">This site</a></li>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/tree/main/packages/template_injector" data-explanation="A simple, custom build, HTML template engine built in Python. It was built to power this site.">template_injector</a></li>
                     </ul>
                 </div>
                 <div class="column-card">
                     <p>Miscellaneous:</p>
                     <ul>
                         <li><a href="https://github.com/ricardo-semiao/misc-general" data-explanation="Miscellaneous projects, most for fun or for learning, with questionable quality.">misc-general</a></li>
-                        <li><a href="https://github.com/mevaldt/diversified_crypto" data-explanation="A R Shiny app for crypto portfolio optimization and analysis. Built in a project for Ripple.">diversified_crypto</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/challenge-constdev" data-explanation="A ML model to predict the investment flow at BOVESPA, for the 2022 Constellation A.M. Dev Challenge.">challenge-constdev</a></li>
+                        <li><a href="https://github.com/mevaldt/diversified_crypto" data-explanation="A R Shiny app for crypto portfolio optimization and analysis. Built in a project for Ripple.">mevaldt/diversified_crypto</a></li>
                     </ul>
                 </div>
             </div>
