Changes before switching to pathlib

--- a/src/cv/template.html
+++ b/src/cv/template.html
@@ -10,7 +10,7 @@
     @@site-style@@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="/assets/cv/cv_style.css">
+    <link rel="stylesheet" href="./module.css">
 </head>
 
 
@@ -129,9 +129,9 @@
             </ul>
         </section>
         
-        <section id="cv-download">
+        <!-- <section id="cv-download">
             <p>PDF version: <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/raw/main/assets/cv/cv_pdf/Ricardo%20Semi%C3%A3o%20-%20CV.pdf" download>download</a>.</p>
-        </section>
+        </section> -->
     </div>
 
     @@site-footer@@
