--- a/src/global/components.html
+++ b/src/global/components.html
@@ -2,42 +2,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Ricardo Semião e Castro">
-    <link rel="icon" href="/site_assets/img/icon.png" type="image/png">
-    <link rel="shortcut icon" href="/site_assets/img/icon.png" type="image/png">
+    <link rel="icon" href="/assets/img/icon.png" type="image/png">
+    <link rel="shortcut icon" href="/assets/img/icon.png" type="image/png">
 </div>
 
 <div data-component-name="site-style">
-    <link rel="stylesheet" href="/site_assets/site_structure.css">
-    <link rel="stylesheet" href="/site_assets/site_style.css">
+    <link rel="stylesheet" href="/assets/global.css">
 </div>
 
 <div data-component-name="site-scripts">
-    <script src="/site_assets/site_structure.js"></script>
+    <script src="/assets/global.js"></script>
 </div>
 
 <div data-component-name="site-header">
     <header id="site-header">
         <div class="header-block"></div>
         <nav>
-            <ul>
+            <ul class="nav-ul">
                 <li class="nav-li"><a href="/">Home</a></li>
-                <li class="nav-li"><a href="/cv.html">CV</a></li>
+                <li class="nav-li"><a href="/cv">CV</a></li>
+                <li class="nav-li"><a href="/blog">Blog</a></li>
                 <li class="nav-drop">
-                    <p>Courses</p>
-                    <button></button>
+                    <p>Library</p><button></button>
                     <ul>
-                        <li class="nav-li"><a href="/course-rfcd/">R (RFCD)</a></li>
-                        <li class="nav-li"><a href="/course-ccia/">CS (CCIA)</a></li>
-                        <li class="nav-li"><a href="/course-paaml/">Python (PAAML)</a></li>
+                        <li class="nav-li"><a href="/library/rfcd">RFCD</a></li>
                     </ul>
                 </li>
                 <li class="nav-drop">
-                    <p>Packages</p>
-                    <button></button>
+                    <p>Tools</p><button></button>
                     <ul>
-                        <li class="nav-li"><a href="/mtsdesc/">mtsdesc</a></li>
-                        <li class="nav-li"><a href="/phyopt/">phyopt</a></li>
-                        <li class="nav-li"><a href="/morphdown/">morphdown</a></li>
+                        <li class="nav-li"><a href="/tools/phyopt">phyopt</a></li>
                     </ul>
                 </li>
             </ul>
