--- a/src/index/template.html
+++ b/src/index/template.html
@@ -10,7 +10,7 @@
     @@site-style@@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="/assets/home/home_style.css">
+    <link rel="stylesheet" href="./index/module.css">
 </head>
 
 
@@ -28,7 +28,7 @@
                     <p>In the navbar, you can find my CV, and the pages for some of my projects. Hover the projects below for a brief explanation of each.</p>
                 </div>
                 <div class="column-img">
-                    <img src="site_assets/img/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
+                    <img src="/assets/img/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
                 </div>
             </div>
         </section>
@@ -97,7 +97,7 @@
 
     @@site-footer@@
 
-    <script src="/assets/home/home_script.js"></script>
+    <script src="./index/module.js"></script>
 
     @@site-scripts@@
 </body>
