Finished basic gallery

--- a/src/global/components.html
+++ b/src/global/components.html
@@ -20,17 +20,18 @@
         <nav>
             <ul class="nav-ul">
                 <li class="nav-li"><a href="/">Home</a></li>
-                <li class="nav-li"><a href="/cv">CV</a></li>
-                <li class="nav-li"><a href="/blog">Blog</a></li>
                 <li class="nav-drop">
-                    <p>Library</p><button></button>
+                    <p>Personal</p><button></button>
                     <ul>
-                        <li class="nav-li"><a href="/library/rfcd">RFCD</a></li>
+                        <li class="nav-li"><a href="/cv">CV</a></li>
+                        <li class="nav-li"><a href="/blog">Blog</a></li>
+                        <li class="nav-li"><a href="/gallery">Gallery</a></li>
                     </ul>
                 </li>
                 <li class="nav-drop">
-                    <p>Tools</p><button></button>
+                    <p>Projects</p><button></button>
                     <ul>
+                        <li class="nav-li"><a href="/library/rfcd">RFCD</a></li>
                         <li class="nav-li"><a href="/tools/phyopt">phyopt</a></li>
                     </ul>
                 </li>
